@@ -1,3 +1,7 @@
+2020-03-27  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* create-version.sh: Resolve issues highlighted by shellcheck.
+
 2020-03-12  Tom Tromey  <tom@tromey.com>
 
 	* common-types.h: Remove GDBSERVER code.
